making a fresh workspace

--- a/report.tex
+++ b/report.tex
@@ -243,7 +243,8 @@ Given the existence of these `universal polynomials' $\gamma_{A,B,C}\in\integers
 1 = \sum_{\lambda\in\compositions} e_{D_\lambda}.
 \end{equation*}
 
-\chapter{Quivers with relations for affine q-Schur algebras}
+
+\chapter{Presenting affine q-Schur algebras}
 
 \section{Basic results and notation}
 
@@ -365,7 +366,7 @@ F_{i+1}^2 F_i - (1+q) F_{i+1} F_i F_{i+1} + q F_i F_{i+1}^2 &= 0.
 \end{align*}
 \end{lemma}
 \begin{proof}
-Here we introduce temporary notation for the basis elements: Write $[ A] = e_A$.
+Here we introduce temporary notation for the basis elements: Write $[A] = e_A$.
 
 % first relation for Es:
 Take $\lambda\in\compositions$.
@@ -393,8 +394,6 @@ for each $\lambda\in\compositions$. The relation $E_i E_{i+1}^2 - (1+q)E_{i+1} E
 The relations between $F_i$ and $F_{i+1}$ may be obtained directly, as above, or by applying the transpose operator to the relations already derived: note that the two sets of relations are related by swapping $E_i$ and $F_i$ and reversing the order of multiplication.
 \end{proof}
 
-
-
 \begin{lemma}[quantum Serre relations: $n=2$]
 {\color{gray} In the case $n=2$, the quantum Serre relations will be of total degree $4$. Look at the presentation of quantum groups for candidate relations. If that fails, brute force won't be too hard.}
 \end{lemma}
@@ -405,7 +404,6 @@ $[E_i, F_j] = 0$ unless $j=i$.
 E_i F_i - F_i E_i = \sum_{\lambda\in\compositions} ([\lambda_i] - [\lambda_{i+1}])1_\lambda.
 \end{equation*}
 \end{lemma}
-
 
 {\color{gray}
 For $\lambda\in\compositions$, let $R_\lambda = e_{\lambda_1\elem{0}{1}+\cdots +\lambda_n\elem{n-1}{n}}$. Write $R = \sum_{\lambda\in\compositions} R_\lambda$. Note $R_\lambda = R 1_\lambda$. Given $A\in\matrices$ and $m\in\integers$, let $A[m]\in\matrices$ be given by $A[m]_{i,j} = a_{i,j+m}$ and let $A^{[m]}$ be given by $A^{[m]}_{i,j} = a_{i+m,j}$ for each $i\in\integers$.
