--- a/report.tex
+++ b/report.tex
@@ -533,7 +533,7 @@ for each $A\in\matrices$. Given $A\in\matrices$, write $A\colon\co{A}\to\ro{A}$.
 
 The purpose of this chapter is to define an associative $\integers$-algebra with a multiplicative basis by defining a modified form of the product in the affine $q$-Schur algebra. In particular, given $A,B\in\matrices$, the orbit product
 \begin{equation*}
-\xprod{A,B} = \{(L,L'')\in\dblflags: \exists L'\in\flags\text{ with } (L,L')\in\orbit{A}, (L',L'')\orbit{B}\}
+\xprod{A,B} = \{(L,L'')\in\dblflags: \exists L'\in\flags\text{ with } (L,L')\in\orbit{A}, (L',L'')\in\orbit{B}\}
 \end{equation*}
 consists of finitely many $G$-orbits and it will be shown that there is a unique `generic' orbit in $\xprod{A,B}$, denoted $\orbit{A\ast B}$, with the property that
 \begin{equation*}
@@ -571,18 +571,15 @@ for each $A\in\matrices$.
 
 \begin{lemma}\label{lemma:differentials}
 For each $A\in\matrices$ and $i,j\in\integers$, the following equations hold:
-\begin{equation}
-d_{i,j}{(A)} - d_{i-1,j}{(A)} = \sum_{t>j}a_{i,t}
-\end{equation}
-\begin{equation}
-d_{i,j}{(A)}-d_{i,j-1}{(A)} = - \sum_{s\le i}a_{s,j}
-\end{equation}
-\begin{equation}
-\bar{d}_{i,j}{(A)} - \bar{d}_{i,j-1}{(A)} = -\sum_{t\le j} a_{i,t}
-\end{equation}
-\begin{equation}
-\bar{d}_{i,j}{(A)} - \bar{d}_{i,j-1}{(A)} = \sum_{s>i} a_{s,j}
-\end{equation}
+\begin{align*}
+d_{i,j}{(A)} - d_{i-1,j}{(A)} &= \sum_{t>j}a_{i,t}\\
+d_{i,j}{(A)}-d_{i,j-1}{(A)} &= - \sum_{s\le i}a_{s,j}
+\end{align*}
+and
+\begin{align*}
+\bar{d}_{i,j}{(A)} - \bar{d}_{i,j-1}{(A)} &= -\sum_{t\le j} a_{i,t}\\
+\bar{d}_{i,j}{(A)} - \bar{d}_{i,j-1}{(A)} &= \sum_{s>i} a_{s,j}
+\end{align*}
 \end{lemma}
 
 \begin{proof}
@@ -605,45 +602,59 @@ and
 \end{proof}
 
 \begin{lemma}\label{lemma:antisymmetry}
-Let $A\in\matrices$, with $A = (a_{i,j})_{i,j\in\integers}$ and write $d_{i,j}=d_{i,j}A$ for each $i,j\in\integers$. Then
+For each $A\in\matrices$ and $i,j\in\integers$,
 \begin{equation*}
-a_{i,j} = d_{i,j-1} - d_{i-1,j-1} + d_{i-1,j} - d_{i,j}
+a_{i,j} = d_{i,j-1}{(A)} - d_{i-1,j-1}{(A)} - d_{i,j}{(A)} + d_{i-1,j}{(A)}
 \end{equation*}
-for each $i,j\in\integers$.
+and
+\begin{equation*}
+a_{i,j} = \bar{d}_{i,j-1}{(A)} - \bar{d}_{i-1,j-1}{(A)} - \bar{d}_{i,j}{(A)} + \bar{d}_{i-1,j}{(A)}.
+\end{equation*}
 \end{lemma}
+
 \begin{proof}
-Using Lemma \ref{lemma:differentials},
+As a result of Lemma \ref{lemma:differentials},
 \begin{align*}
-a_{i,j}
-&= \sum_{t>j-1}a_{i,t} - \sum_{t>j}a_{i,t}\\
-&= (d_{i,j-1} - d_{i-1,j-1}) - (d_{i,j} - d_{i-1,j}).
+d_{i,j-1}{(A)} - d_{i-1,j-1}{(A)} - d_{i,j}{(A)} + d_{i-1,j}{(A)} &= \sum_{t>j-1} a_{i,t} - \sum_{t>j} a_{i,t}\\
+&= a_{i,j}
 \end{align*}
-Alternatively,
+and
 \begin{align*}
-a_{i,j}
-&= \sum_{s\le i}a_{s,j} - \sum_{s\le i-1}a_{s,j}\\
-&= -(d_{i,j}-d_{i,j-1}) + (d_{i-1,j} - d_{i-1,j-1}).
+\bar{d}_{i,j-1}{(A)} - \bar{d}_{i-1,j-1}{(A)} - \bar{d}_{i,j}{(A)} + \bar{d}_{i-1,j}{(A)} &= -\sum_{t\le j-1} a_{i,t} + \sum_{t\le j} a_{i,t}\\
+&= a_{i,j}.
 \end{align*}
 \end{proof}
 
+Define a relation $\le$ on $\matrices$ by $A\le B$ if and only if the following conditions are satisfied:
+\begin{itemize}
+\item
+$\ro{A}=\ro{B}$ and $\co{A}=\co{B}$.
+\item
+For each $i,j\in\integers$, $d_{i,j}{(A)}\le d_{i,j}{(B)}$.
+\item
+For each $i,j\in\integers$, $\bar{d}_{i,j}{(A)} \le \bar{d}_{i,j}{(B)}$.
+\end{itemize}
+
 \begin{lemma}\label{lemma:orbit-poset}
-The relation $\le$ on $\matrices$, defined by $A\le B$ if and only if $d_{i,j}A\le d_{i,j}B$ for all $i,j\in\integers$, is a partial order.
+The relation $\le$ defines a partial order on $\matrices$.
 \end{lemma}
 
 \begin{proof}
-It is clear that $\le$ is reflexive and transitive, so it remains to see $\le$ is antisymmetric. Suppose $A,B\in\matrices$ with $A\le B$ and $B\le A$. Then $d_{i,j}A = d_{i,j}B$ for each $i,j\in\integers$, which shows $A=B$ as a result of Lemma \ref{lemma:antisymmetry}.  
+It is clear that $\le$ is reflexive and transitive.
+
+Suppose $A,B\in\matrices$ with $A\le B$ and $B\le A$. Then $d_{i,j}{(A)} = d_{i,j}{(B)}$ for each $i,j\in\integers$ with $i\le j$, which shows $a_{s,t}=b_{s,t}$ whenever $s<t$, as a result of Lemma \ref{lemma:antisymmetry}. Similarly, $\bar{d}_{i,j}{(A)} = \bar{d}_{i,j}{(B)}$ for each $i,j\in\integers$ with $i\geq j$, so $a_{s,t}=b_{s,t}$ whenever $s>t$. Moreover, $a_{i,i}=b_{i,i}$ for each $i\in\integers$, since $\co{A}=\co{B}$. Thus $A=B$, which shows $\le$ is antisymmetric and therefore $\le$ is a partial order on $\matrices$.
 \end{proof}
 
 The partial order on $\matrices$ induces a partial order on the set of $G$-orbits in $\dblflags$, such that $\orbit{A}\le \orbit{B}$ if and only if $A\le B$. The following lemma is rephrased from Lemma \ref{lemma:flags-codimension-formula} and gives some geometric significance to the partial order on $\matrices$.
 
 \begin{lemma}\label{lemma:codimension-formula-corner-sums}
-Let $A\in\matrices$ and take $(L,L')\in\orbit{A}$. Then
+Let $A\in\matrices$ and $(L,L')\in\orbit{A}$. Then
 \begin{equation*}
-\dim\left(\frac{L_i}{L_i\cap L_j'}\right) = d_{i,j}{A}
+\dim\left(\frac{L_i}{L_i\cap L_j'}\right) = d_{i,j}{(A)}
 \end{equation*}
 and
 \begin{equation*}
-\dim\left(\frac{L_j'}{L_i\cap L_j'}\right) = \bar{d}_{i,j}{A},
+\dim\left(\frac{L_j'}{L_i\cap L_j'}\right) = \bar{d}_{i,j}{(A)},
 \end{equation*}
 for each $i,j\in\integers$.
 \end{lemma}
@@ -946,7 +957,10 @@ where $M\geq N$ is chosen so that $\epsilon^M L_0\subset L_i\subset\epsilon^{-M}
 
 \section{Geometry of orbits}
 
-Let $A\in\matrices$ and $L\in\flags_{\ro{A}}$ and write $\lambda=\co{A}$.
+Let $A\in\matrices$ and $L\in\flags_{\ro{A}}$ and write $\lambda=\co{A}$. Recall that
+\begin{equation*}
+\xprod[L]{A} = \{L'\in\flags_\lambda: (L,L')\in\orbit{A}\}.
+\end{equation*}
 
 \begin{lemma}\label{lemma:bounded-orbits}
 There is $N\in\naturals$ such that $\xprod[L]{A}\subset\Pi_{N,\lambda}^a(L)$, where $a=d_{nN,0}{A}$.
@@ -1115,13 +1129,16 @@ and
 \end{equation*}
 for each $i,j\in\integers$, for any $L'\in\xprod[L]{B}$. So $B\le A$ if $\xprod[L]{B}\le\overline{\xprod[L]{A}}$.
 
+{\color{red}
 Conversely, suppose $A\le B$.
+}
 
 \end{proof}
 
 \begin{corollary}
 The maximum in $\matrices[A,B]$ is $A\ast B$.
 \end{corollary}
+
 
 
 \section{Associativity of the generic product}
